
=== New and Updated Features

The following features are new (or have been significantly updated)
since version 1.10:

* Wireshark now uses the Qt application framework. The new UI should provide
  a significantly better user experience, particularly on Mac OS X and Windows.
* A more flexible, modular memory manger (wmem) has been added.
* Expert info is now filterable (if the dissector has been updated to support
  the new API).
* The Windows installer now uninstalls the previous version of Wireshark
  silently.  You can still run the uninstaller manually beforehand if you wish
  to run it interactively.
* The "Number" column shows related packets and protocol conversation spans
  (Qt only).
* When manipulating packets with editcap using the -C <choplen> and/or
  -s <snaplen> options, it is now possible to also adjust the original frame
  length using the -L option.
* You can now pass the -C <choplen> option to editcap multiple times, which
  allows you to chop bytes from the beginning of a packet as well as at the end
  of a packet in a single step.
* You can now specify an optional offset to the -C option for editcap, which
  allows you to start chopping from that offset instead of from the absolute
  packet beginning or end.

=== New Protocol Support

--sort-and-group--

ASTERIX
SEL RTAC (Real Time Automation Controller) EIA-232 Serial-Line Dissection
UDT

--sort-and-group--

=== Updated Protocol Support

Too many protocols have been updated to list here.

=== New and Updated Capture File Support

--sort-and-group--

Netscaler 2.6
STANAG 4607

--sort-and-group--

== Getting Wireshark

Wireshark source code and installation packages are available from
http://www.wireshark.org/download.html.

=== Vendor-supplied Packages

Most Linux and Unix vendors supply their own Wireshark packages. You can
usually install or upgrade Wireshark using the package management system
specific to that platform. A list of third-party packages can be found