@@ -1724,8 +1724,8 @@ properties_cb(GtkWidget *w, gpointer dummy)
             hfinfo =  v->hfinfo;
 
             if (!g_str_has_prefix(hfinfo->abbrev, "text") &&
-                    !g_str_has_prefix(hfinfo->abbrev, "expert") &&
-                    !g_str_has_prefix(hfinfo->abbrev, "malformed")) {
+                    !g_str_has_prefix(hfinfo->abbrev, "_ws.expert") &&
+                    !g_str_has_prefix(hfinfo->abbrev, "_ws.malformed")) {
                 if (hfinfo->parent == -1) {
                     abbrev = hfinfo->abbrev;
                 } else {
